Added source code link
Bottom of page.

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
             <img src="images/cloud.png" alt="cloudy" width="50px" /> <br />20°C
           </div>
         </div>
+        <a href="https://github.com/gemmaguilfoyle/Weather-app">Open-source code</a> by Gemma Guilfoyle
         <script src="src/script.js"></script>
       </div>
     </div>
