--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <title>GG's Weather App</title>
   </head>
   <body>
-    <div class="container" id="border">
+    <div class="container" id="wrapper">
       <div class="container" id="main-body">
         <form class="form-inline" id="searchForm">
           <div class="row">
@@ -52,21 +52,29 @@
             </div>
           </div>
         </form>
-        <h1>CARDIFF</h1>
-        <h2>
-          THURSDAY 24TH JUNE
-          <div>15:37</div>
-        </h2>
 
-        <h4>22°C</h4>
-        <h5>SCATTERED CLOUDS</h5>
+        <div class="row">
+          <div class="col-6">
+            <h1>CARDIFF</h1>
+            <h2>
+              THURSDAY 24TH JUNE
+              <div>15:37</div>
+            </h2>
+            <img src="images/cloud.png" alt="clouds" />
+            <h5>SCATTERED CLOUDS</h5>
+          </div>
+          <div class="col-6">
+            <h4>22°C</h4>
+          </div>
+        </div>
+
         <div class="row justify-content-center" id="descriptors">
           <div class="col-2 p-3" id="humidity-style">
             Humidity
             <div id="humidity">67</div>
           </div>
-          <div class="col-2 p-3" id="feels-like-style">
-            Feels Like
+          <div class="col-3 p-3" id="feels-like-style">
+            Precipitation
             <div id="feelsLike">20</div>
           </div>
           <div class="col-2 p-3" id="wind-style">
@@ -104,7 +112,10 @@
             <img src="images/cloud.png" alt="cloudy" width="50px" /> <br />20°C
           </div>
         </div>
-        <a href="https://github.com/gemmaguilfoyle/Weather-app" target="_blank">Open-source code</a> by Gemma Guilfoyle
+        <a href="https://github.com/gemmaguilfoyle/Weather-app" target="_blank"
+          >Open-source code</a
+        >
+        by Gemma Guilfoyle
         <script src="src/script.js"></script>
       </div>
     </div>
